--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game da Cobrinha</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <script defer src="js/script.js"></script>
 </head>
 <body>
     <h2 class='titulo'>GAME DA COBRINHA</h2>
-    <canvas id="snake" width="800" height="800"></canvas>
+    <canvas id="snake" width="500" height="500"></canvas>
 </body>
 </html>
